# manimhl

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
scripts/: manimhl
src/manimhl/: __init__.py  manimhl.py
tests/: slides.py
